<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="fb_app_id_pamba">681570278574753</string>
	<string name="fb_app_id_production">1639851092919190</string>
	<string name="auto_complete_url">http://pamba.strandls.com/api/recommendation/suggest</string>
	<string name="auto_complete_url_prod">http://indiabiodiversity.org/api/recommendation/suggest</string>
	<string name="wait_fetch_location">Please wait while we fetch location..</string>
    <string name="app_name">Wikwio CS</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="confirm_password">Confirm Password</string>
	<string name="login">Login</string>
	<string name="new_user">New User</string>
	<string name="or">Or</string>
	<string name="login_with_facebook">Login with Facebook</string>
	<string name="login_with_twitter">Login with Twitter</string>
	<string name="forgot_password">Forgot Password?</string>
	<string name="register">Register</string>
	<string name="msg_term_conditions">By registering you agree to our &lt;a href="http://indiabiodiversity.org/terms"&gt; Terms &amp; Conditions &lt;/a&gt;</string>
	<string name="no_connection">Please make sure you are connected to the Internet.</string>
	<string name="error_unknown_error">Sorry, unknown error occurred. Please try again!</string>
	<string name="not_connected_text">Web: Connection Problem. Try again</string>
	<string name="error_uncaught">Sorry, there was an unexpected error.</string>
	<string name="error">Error</string>
	<string name="resend_email">Resend Email</string>
	<string name="cancel">Cancel</string>
	<string name="ok">Ok</string>
	<string name="loading">Loading..</string>
	<string name="alert">Alert</string>
	<string name="home">Home</string>
	<string name="menu">Menu</string>
	<string name="new_observation">New Observation</string>
	<string name="what_s_near_me">Observations near me</string>
	<string name="my_collection">My Collection</string>
	<string name="settings">Settings</string>
	<string name="logout">Logout</string>
	<string name="logging_out">Logging Out</string>
	<string name="browse_obesrvation">Browse Observations</string>
	<string name="obeservations_near_me">Obeservations Near Me</string>
	<string name="loading_species_group">Loading Species Group</string>
	<string name="observations">Observations</string>
	<string name="unknown">Unknown</string>
	<string name="add_photos">Add Photos of a Single Observation</string>
	<string name="add_photo">Add Photo</string>
	<string name="category">Category</string>
	<string name="select_category">Select Category</string>
	<string name="help_identify">Help Identify</string>
	<string name="common_name">Common Name</string>
	<string name="scientific_name">Scientific Name</string>
	<string name="additional_comments">Notes</string>
	<string name="date_sighted">Date Sighted</string>
	<string name="submit">Submit</string>
	<string name="pick_date">Pick Date</string>
	<string name="gallery">Gallery</string>
	<string name="camera">Camera</string>
	<string name="select_from">Select from</string>
	<string name="select_location">Select Location</string>
	<string name="label_reverse_lookup_error">Cannot fetch address</string>
	<string name="reverse_lookup_error_address" formatted="false">Latitude: %f, Longitude:%f</string> 
	<string name="map_api_key_vikas">AIzaSyAJArV-YV1Z-xtXzGY1s6BTq0NJY1Ho8YE</string>
	<string name="map_api_key">AIzaSyBbMXETlzPy5lkoKDhOSoqMvB11j7d4BWU</string>
	<string name="observation_msg">Your observation will be submitted shortly!</string> 
	<string name="observation_msg_without_internet">Your observation will be submitted when you are next online.</string> 
	<string name="view_on_map">View on Map</string> 
	<string name="map">Map</string> 
	<string name="place">Place:</string> 
	<string name="observed_on">Observed on:</string>
	<string name="updated">Updated:</string>
	<string name="submitted">Submitted:</string>
	<string name="notes">Notes:</string>
	<string name="observation_status">Submitted observations status</string> 
	<string name="msg_password_sent">Password will be sent to this email id.</string>
	<string name="no_obs_msg">You have not submitted any observations</string>
	<string name="select_loc">Select Location</string>
	<string name="more_info">More Info ></string>
	<string name="valid_date">Please select valid date</string>
	<string name="bound_error">Location is outside bound..</string>
	<string name="alert_internet">It seems you are not connected to the internet. Do you still wish to proceed? If yes, click here.</string>
	<string name="edit">Edit</string>
	<string name="edit_photo">Edit Photo</string>
	<string name="edit_observation">Edit Observation</string>
	<string name="delete">Delete</string>
	<string name="msg_confirm_delete">Are you sure you want to delete this observation? If yes, click here.</string>
	<string name="incomplete_obs">Incomplete observations</string>
	<string name="msg_incomplete_obs">You have %d incomplete observations. Please press button below to submit observation.</string>
	<string name="get_current_location">Get current Location</string>
	<string name="cannot_get_current_location">Cannot get current Location. Using last known location.</string>
	<string name="edit_location">Edit Location</string>
	<string name="msg_import_metadata">Do you want to set the date, time and Location of this observation from photo\'s metadata</string>
	<string name="import_metadata">Import Metadata</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="joined_groups">Joined Groups</string>
	<string name="join">Join</string>
	<string name="select_user_groups">Select User Groups</string>
	<string name="msgNotificationTitle">Observation submitted</string>
	<string name="msgNotificationMessage">Observation %s has been submitted to the website </string>
	<string name="wifisettings">Upload over WIFI</string>
	<string name="wifisummary">Use only WIFI connection &amp; upload observations</string>
	<string name="manualsettings">Upload Manually</string>
	<string name="manualsummary">Prevents automated uploading of observation from the queue</string>
	<string name="manual_observation">Submit Pending observations</string>
	<string name="pending_obs">Your Pending observations will be submitted soon</string>
	<string name="pending_obs_network">Please make sure you are connected to Internet</string>
</resources>
