<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:padding="10dp">
    <TextView android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/email"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
    <EditText android:id="@+id/edit_email"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_below="@id/email"/>
    <View android:id="@+id/view01"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_below="@id/edit_email"
	    android:background="@android:color/darker_gray"
	    android:layout_marginTop="10dp"/>
	<LinearLayout android:id="@+id/btn_layout"
	    android:layout_width="fill_parent"
	    android:layout_height="45dp"
	    android:weightSum="2.0"
	    android:layout_below="@id/view01">
	    <Button android:id="@+id/btn_cancel"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1.0"
	        android:text="@string/cancel"
	        android:textColor="@android:color/black"/>
	    <View android:id="@+id/view02"
		    android:layout_width="1dp"
		    android:layout_height="wrap_content"
		    android:background="@android:color/darker_gray"/>
	    <Button android:id="@+id/btn_ok"
	        android:layout_width="0dp"
	        android:layout_height="fill_parent"
	        android:layout_weight="1.0"
	        android:text="@string/ok"
	        android:textColor="@android:color/black"/>
	</LinearLayout>
	<View android:id="@+id/view03"
	    android:layout_width="fill_parent"
	    android:layout_height="1dp"
	    android:layout_below="@id/btn_layout"
		android:background="@android:color/darker_gray"/>
</RelativeLayout>
