<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:paddingBottom="8dp">
	<LinearLayout android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical">
		<TextView android:id="@+id/label_add_photos"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_marginLeft="8dp"
		    android:layout_marginTop="8dp"
		    android:text="@string/add_photos"
		    android:textSize="18sp"
		    android:textStyle="bold"
		    android:textColor="@color/brown_color"/>
		<LinearLayout android:id="@+id/image_layout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_marginTop="8dp"
		    android:orientation="horizontal"
		    android:weightSum="3.0">
		    <LinearLayout android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:padding="6dp">
	            <ImageView android:id="@+id/species_image_1"
	                android:layout_width="80dp"
	                android:layout_height="80dp"
	                android:layout_gravity="center_horizontal"
	                android:scaleType="centerCrop"
	                android:background="@drawable/user_stub"/>
	            <Button android:id="@+id/btn_add_photo_1"
	                android:layout_width="120dp"
	                android:layout_height="40dp"
	                android:layout_marginTop="8dp"
	                android:text="@string/add_photo"
	                android:textColor="@color/bg_color"
	                android:layout_gravity="center_horizontal"
	                android:background="@drawable/app_btn"/>
	        </LinearLayout>
	        <LinearLayout android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:padding="6dp">
	            <ImageView android:id="@+id/species_image_2"
	                android:layout_width="80dp"
	                android:layout_height="80dp"
	                android:layout_gravity="center_horizontal"
	                android:scaleType="centerCrop"
	                android:background="@drawable/user_stub"/>
	            <Button android:id="@+id/btn_add_photo_2"
	                android:layout_width="120dp"
	                android:layout_height="40dp"
	                android:layout_marginTop="8dp"
	                android:text="@string/add_photo"
	                android:textColor="@color/bg_color"
	                android:layout_gravity="center_horizontal"
	                android:background="@drawable/app_btn"/>
	        </LinearLayout>
	        <LinearLayout android:layout_width="0dp"
	            android:layout_height="wrap_content"
	            android:layout_weight="1.0"
	            android:orientation="vertical"
	            android:padding="6dp">
	            <ImageView android:id="@+id/species_image_3"
	                android:layout_width="80dp"
	                android:layout_height="80dp"
	                android:layout_gravity="center_horizontal"
	                android:scaleType="centerCrop"
	                android:background="@drawable/user_stub"/>
	            <Button android:id="@+id/btn_add_photo_3"
	                android:layout_width="120dp"
	                android:layout_height="40dp"
	                android:layout_marginTop="8dp"
	                android:text="@string/add_photo"
	                android:textColor="@color/bg_color"
	                android:layout_gravity="center_horizontal"
	                android:background="@drawable/app_btn"/>
	        </LinearLayout>
		</LinearLayout>
		<LinearLayout android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:orientation="horizontal"
	          android:weightSum="3.0"
	          android:layout_marginTop="8dp">
	       <LinearLayout android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1.0"
	           android:orientation="vertical"
	           android:padding="6dp">
	           <ImageView android:id="@+id/species_image_4"
	               android:layout_width="80dp"
	               android:layout_height="80dp"
	               android:layout_gravity="center_horizontal"
	               android:scaleType="centerCrop"
	               android:background="@drawable/user_stub"/>
	           <Button android:id="@+id/btn_add_photo_4"
	               android:layout_width="120dp"
	               android:layout_height="40dp"
	               android:layout_marginTop="8dp"
	               android:text="@string/add_photo"
	               android:textColor="@color/bg_color"
	               android:layout_gravity="center_horizontal"
	               android:background="@drawable/app_btn"/>
	       </LinearLayout>
	       <LinearLayout android:layout_width="0dp"
	           android:layout_height="wrap_content"
	           android:layout_weight="1.0"
	           android:orientation="vertical"
	           android:padding="6dp">
	           <ImageView android:id="@+id/species_image_5"
	               android:layout_width="80dp"
	               android:layout_height="80dp"
	               android:layout_gravity="center_horizontal"
	               android:scaleType="centerCrop"
	               android:background="@drawable/user_stub"/>
	           <Button android:id="@+id/btn_add_photo_5"
	               android:layout_width="120dp"
	               android:layout_height="40dp"
	               android:layout_marginTop="8dp"
	               android:text="@string/add_photo"
	               android:textColor="@color/bg_color"
	               android:layout_gravity="center_horizontal"
	               android:background="@drawable/app_btn"/>
	        </LinearLayout>
	    </LinearLayout>
	    <Button android:id="@+id/btn_category"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="12dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:text="@string/select_category"
	        android:textColor="@color/bg_color"
	        android:background="@drawable/app_btn"/> 
	    <CheckBox android:id="@+id/chk_help_identify"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:text="@string/help_identify"
	        android:textColor="@color/brown_color"
	        android:textStyle="bold"
	        android:textSize="18sp"
	        android:layout_marginTop="8dp"
	        android:layout_marginLeft="8dp"
	        android:button="@drawable/checbox_selector"/>
	    <EditText android:id="@+id/edit_common_name"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="8dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:paddingLeft="8dp"
	        android:hint="@string/common_name"
	        android:textColorHint="@color/brown_color"
	        android:textColor="@color/brown_color"
	        android:background="@android:color/white"/>
	    <EditText android:id="@+id/edit_sci_name"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="8dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:paddingLeft="8dp"
	        android:hint="@string/scientific_name"
	        android:textColorHint="@color/brown_color"
	        android:textColor="@color/brown_color"
	        android:background="@android:color/white"/>
	    <EditText android:id="@+id/edit_add_notes"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="8dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:paddingLeft="8dp"
	        android:paddingTop="8dp"
	        android:lines="3"
	        android:ellipsize="end"
	        android:gravity="top"
	        android:hint="@string/additional_comments"
	        android:textColorHint="@color/brown_color"
	        android:textColor="@color/brown_color"
	        android:background="@android:color/white"/>
	    <Button android:id="@+id/btn_date_sighted"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="12dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:text="@string/date_sighted"
	        android:textColor="@color/bg_color"
	        android:background="@drawable/app_btn"/>
	    <EditText android:id="@+id/edit_location"
	        android:layout_width="fill_parent"
	        android:layout_height="40dp"
	        android:layout_marginTop="8dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:paddingLeft="8dp"
	        android:hint="@string/location"
	        android:textColorHint="@color/brown_color"
	        android:textColor="@color/brown_color"
	        android:background="@android:color/white"/>
	     <Button android:id="@+id/btn_submit"
	        android:layout_width="120dp"
	        android:layout_height="40dp"
	        android:layout_marginTop="12dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginRight="8dp"
	        android:gravity="center_horizontal"
	        android:layout_gravity="center_horizontal"
	        android:text="@string/submit"
	        android:textColor="@color/bg_color"
	        android:background="@drawable/app_btn"/>      
	</LinearLayout>
</ScrollView>