<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#454545">
    <TextView android:id="@+id/menu"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/menu"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <ImageView android:id="@+id/separator1"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="8dp"
	    android:background="@drawable/menu_separator"/>
    <RelativeLayout android:id="@+id/layout_home"
	    android:layout_width="match_parent"
	    android:layout_height="50dp">
	    <View android:id="@+id/indicator_home"
	        android:layout_width="12dp"
	        android:layout_height="match_parent"
	        android:layout_alignParentLeft="true"
	        android:paddingTop="10dp" android:paddingBottom="10dp"
	        android:paddingLeft="8dp" android:paddingRight="8dp"
	        android:background="@color/orange_color"/>
	    <TextView android:id="@+id/home"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_toRightOf="@id/indicator_home"
	        android:layout_centerVertical="true"
	        android:gravity="center_vertical"
	        android:paddingTop="10dp" android:paddingBottom="10dp"
	        android:paddingLeft="8dp" android:paddingRight="8dp"
	        android:textColor="@android:color/white"
	        android:text="@string/home"
	        android:textSize="18sp"
	        android:drawableLeft="@drawable/home"
	        android:drawablePadding="8dp"
	        android:background="@drawable/menu_selector"
	        android:clickable="true"/>
		</RelativeLayout>
		<ImageView android:id="@+id/separator2"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/menu_separator"/>
		<RelativeLayout android:id="@+id/layout_observation"
		    android:layout_width="match_parent"
		    android:layout_height="50dp">
		    <View android:id="@+id/indicator_observation"
		        android:layout_width="12dp"
		        android:layout_height="match_parent"
		        android:layout_alignParentLeft="true"
		        android:paddingTop="10dp" android:paddingBottom="10dp"
		        android:paddingLeft="8dp" android:paddingRight="8dp"
		        android:visibility="invisible"
		        android:background="@color/orange_color"/>
		    <TextView android:id="@+id/observation"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/indicator_observation"
		        android:layout_centerVertical="true"
		        android:paddingTop="10dp" android:paddingBottom="10dp"
		        android:paddingLeft="8dp" android:paddingRight="8dp"
		        android:gravity="center_vertical"
		        android:textColor="@android:color/white"
		        android:text="@string/new_observation"
		        android:textSize="18sp"
		        android:drawableLeft="@drawable/new_observation"
		        android:drawablePadding="8dp"
		        android:background="@drawable/menu_selector"
		        android:clickable="true"/>
		</RelativeLayout>
		<ImageView android:id="@+id/separator3"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/menu_separator"/>
		<RelativeLayout android:id="@+id/layout_nearme"
		    android:layout_width="match_parent"
		    android:layout_height="50dp">
		    <View android:id="@+id/indicator_nearme"
		        android:layout_width="12dp"
		        android:layout_height="match_parent"
		        android:layout_alignParentLeft="true"
		        android:paddingTop="10dp" android:paddingBottom="10dp"
		        android:paddingLeft="8dp" android:paddingRight="8dp"
		        android:visibility="invisible"
		        android:background="@color/orange_color"/>
		    <TextView android:id="@+id/nearme"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/indicator_nearme"
		        android:layout_centerVertical="true"
		        android:paddingTop="10dp" android:paddingBottom="10dp"
		        android:paddingLeft="8dp" android:paddingRight="8dp"
		        android:gravity="center_vertical"
		        android:textColor="@android:color/white"
		        android:text="@string/what_s_near_me"
		        android:textSize="18sp"
		        android:drawableLeft="@drawable/pin"
		        android:drawablePadding="8dp"
		        android:background="@drawable/menu_selector"
		        android:clickable="true"/>
		</RelativeLayout>
		<ImageView android:id="@+id/separator4"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/menu_separator"/>
		<RelativeLayout android:id="@+id/layout_my_collection"
		    android:layout_width="match_parent"
		    android:layout_height="50dp">
		    <View android:id="@+id/indicator_my_collection"
		        android:layout_width="12dp"
		        android:layout_height="match_parent"
		        android:layout_alignParentLeft="true"
		        android:paddingTop="10dp" android:paddingBottom="10dp"
		        android:paddingLeft="8dp" android:paddingRight="8dp"
		        android:visibility="invisible"
		        android:background="@color/orange_color"/>
		    <TextView android:id="@+id/my_collection"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/indicator_my_collection"
		        android:layout_centerVertical="true"
		        android:paddingTop="10dp" android:paddingBottom="10dp"
		        android:paddingLeft="8dp" android:paddingRight="8dp"
		        android:gravity="center_vertical"
		        android:textColor="@android:color/white"
		        android:text="@string/my_collection"
		        android:textSize="18sp"
		        android:drawableLeft="@drawable/my_collection"
		        android:drawablePadding="8dp"
		        android:background="@drawable/menu_selector"
		        android:clickable="true"/>
		</RelativeLayout>
		<ImageView android:id="@+id/separator5"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/menu_separator"/>
		<RelativeLayout android:id="@+id/layout_observation_status"
		    android:layout_width="match_parent"
		    android:layout_height="50dp">
		    <View android:id="@+id/indicator_status"
		        android:layout_width="12dp"
		        android:layout_height="match_parent"
		        android:layout_alignParentLeft="true"
		        android:paddingTop="10dp" android:paddingBottom="10dp"
		        android:paddingLeft="8dp" android:paddingRight="8dp"
		        android:visibility="invisible"
		        android:background="@color/orange_color"/>
		    <TextView android:id="@+id/status"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/indicator_status"
		        android:layout_centerVertical="true"
		        android:paddingTop="10dp" android:paddingBottom="10dp"
		        android:paddingLeft="8dp" android:paddingRight="8dp"
		        android:gravity="center_vertical"
		        android:textColor="@android:color/white"
		        android:text="@string/observation_status"
		        android:textSize="16sp"
		        android:ellipsize="end"
	    		android:singleLine="true"
		        android:drawableLeft="@drawable/obs_status"
		        android:drawablePadding="8dp"
		        android:background="@drawable/menu_selector"
		        android:clickable="true"/>
		</RelativeLayout>
		<ImageView android:id="@+id/separator10"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/menu_separator"/>
		<RelativeLayout android:id="@+id/layout_settings"
		    android:layout_width="match_parent"
		    android:layout_height="50dp"
		    android:visibility="gone">
		    <View android:id="@+id/indicator_settings"
		        android:layout_width="12dp"
		        android:layout_height="match_parent"
		        android:layout_alignParentLeft="true"
		        android:paddingTop="10dp" android:paddingBottom="10dp"
		        android:paddingLeft="8dp" android:paddingRight="8dp"
		        android:visibility="invisible"
		        android:background="@color/orange_color"/>
		    <TextView android:id="@+id/settings"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_toRightOf="@id/indicator_settings"
		        android:layout_centerVertical="true"
		        android:paddingTop="10dp" android:paddingBottom="10dp"
		        android:paddingLeft="8dp" android:paddingRight="8dp"
		        android:gravity="center_vertical"
		        android:textColor="@android:color/white"
		        android:text="@string/settings"
		        android:textSize="18sp"
		        android:drawableLeft="@drawable/settings"
		        android:drawablePadding="8dp"
		        android:background="@drawable/menu_selector"
		        android:clickable="true"/>
		</RelativeLayout>
		<ImageView android:id="@+id/separator6"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/menu_separator"
		    android:visibility="gone"/>
		<TextView android:id="@+id/logout"
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:layout_marginLeft="12dp"
	        android:gravity="center_vertical"
	        android:paddingTop="10dp" android:paddingBottom="10dp"
	        android:paddingLeft="8dp" android:paddingRight="8dp"
	        android:textColor="@android:color/white"
	        android:text="@string/logout"
	        android:textSize="18sp"
	        android:drawableLeft="@drawable/logout"
	        android:drawablePadding="8dp"
	        android:background="@drawable/menu_selector"
	        android:clickable="true"/>
		<ImageView android:id="@+id/separator9"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:background="@drawable/menu_separator"/>
</LinearLayout>
